@@ -181,6 +181,8 @@ IMPROVEMENTS:
   include in release (phunt via breed)
 
   ZOOKEEPER-383. Asynchronous version of createLedger(). (flavio via mahadev)
+
+  ZOOKEEPER-358. Throw exception when ledger does not exist. (flavio via breed)
  
 NEW FEATURES:
 
